istio-config/istio-gateway-mapping.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-gateway
spec:
  selector:
    istio: ingressgateway # use the default IngressGateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apigateway-ingress
spec:
  hosts:
  - "*"
  gateways:
  - api-gateway
  http:
  - route:
    - destination:
        host: apigateway.service.svc.cluster.local
        port:
          number: 80
